# weather-forecast

./: .gitignore  CMakeLists.txt  README.md
lib/: forecast.cpp  forecast.h
sets/: config.json  months_codes.json  weather_codes.json
